[package]
name = "deezer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
deezer_downloader = { git = "https://github.com/zggff/deezer_downloader.git" }
dotenv = "0.15.0"
dptree = "0.3.0"
reqwest = { version = "0.11.20", features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
teloxide = "0.12.2"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
