[package]
name = "deezer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
deezer_downloader = { git = "https://github.com/Stockpesce/deezer_downloader.git" }
dotenv = "0.15.0"
dptree = "0.3.0"
reqwest = { version = "0.11.20", features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "chrono"] }
serde_json = "1.0.107"
log = "0.4.20"
chrono = "0.4.31"

# tracing deps
# opentelemetry = { version = "0.20.0", features = ["metrics"] }
# opentelemetry-prometheus = "0.13.0"
# prometheus = "0.13.3"
hyper = { version = "0.14.27", features = [
    "server",
    "http1",
    "http2",
    "stream",
] }
